--- a/styles.css
+++ b/styles.css
@@ -2,30 +2,56 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 30px;
 }
 
 .rows {
     display: flex;
-    width: 350px;
-    height: 70px;
+    width: 306px;
+    height: 60px;
     
 }
 .squares {
-    width: 70px;
-    height: 70px;
-    background-color: silver;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    vertical-align: middle;
+    background-color: rgb(230, 230, 230);
     border: 1px solid grey;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: grey;
 }
 
 .keyboard-row {
     display: flex;
-    width: 500px;
+    width: 550px;
+    height: 60px;
+    justify-content: center;
+    gap: 8px;
 }
 
-.letter, .key {
-    width: 60px;
-    height: 50px;
+.key {
+    width: 52px;
+    height: 52px;
+    text-align: center;
+    line-height: 50px;
+    vertical-align: middle;
     border: 1px solid grey;
+    border-radius: 10px;
+    background-color: rgb(230, 230, 230);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.key:hover {
+    box-shadow: 0px 0px 8px 2px inset rgb(192, 192, 192);
+}
+
+#Enter, #Backspace {
+    width: 70px;
+    font-size: 12px;
 }
 
 .correct {
