--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     text-align: center;
     line-height: 60px;
     vertical-align: middle;
-    background-color: rgb(230, 230, 230);
+    background-color: whitesmoke;
     border: 1px solid grey;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
@@ -56,8 +56,14 @@
 
 .correct {
     color: green;
+    background-color: rgb(230, 230, 230);
 }
   
 .misplaced {
     color: darkgoldenrod;
+    background-color: rgb(230, 230, 230);
+}
+
+.incorrect {
+    background-color: rgb(230, 230, 230);
 }
