--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: bold;
-    color: grey;
+    color: rgb(44, 44, 44);
 }
 
 .keyboard-row {
@@ -65,5 +65,6 @@
 }
 
 .incorrect {
+    color: grey;
     background-color: rgb(230, 230, 230);
 }
